# faw

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  demo.py  mkdocs.yml  pyproject.toml
docs/: 404.html  demo.html  index.html  objects.inv
docs/concept_map/: index.html
docs/conduct/: index.html
docs/contributing/: index.html
docs/flashcard/: index.html
docs/labeling/: index.html
docs/license/: index.html
docs/matching/: index.html
docs/multiple_choice/: index.html
docs/ordering/: index.html
js/: build.js  package-lock.json  package.json
js/src/: annotation.js  concept-map.js  flashcard.js  labeling.js  matching.js  multiple-choice.js  ordering.js  styles.css
pages/: concept_map.md  flashcard.md  index.md  labeling.md  matching.md  multiple_choice.md  ordering.md
src/faw/: __init__.py  annotation.py  concept_map.py  flashcard.py  labeling.py  matching.py  multiple_choice.py  ordering.py
src/faw/public/: concept-map.js  concept-map.js.map  flashcard.js  flashcard.js.map  labeling.js  labeling.js.map  matching.js  matching.js.map  multiple-choice.js  multiple-choice.js.map  ordering.js  ordering.js.map
src/faw/static/: concept-map.js  concept-map.js.map  flashcard.js  flashcard.js.map  labeling.js  labeling.js.map  matching.js  matching.js.map  multiple-choice.js  multiple-choice.js.map  ordering.js  ordering.js.map
tests/: test_annotation.py  test_concept_map.py  test_flashcard.py  test_matching.py  test_multiple_choice.py  test_ordering.py
