[project]
name = "faw"
dynamic = ["version"]
description = "Formative assessment widgets"
keywords = ["open source", "AnyWidget", "formative assessment", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Greg Wilson", email = "gvwilson@third-bit.com"},
]
dependencies = [
    "anywidget>=0.9.21",
]

[project.urls]
Repository = "https://github.com/gvwilson/faw"

[dependency-groups]
dev = [
    "build>=1.4.0",
    "marimo>=0.19.9",
    "markdown-include>=0.8.1",
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.7.5",
    "mkdocstrings[python]>=1.0.3",
    "pymdown-extensions>=10.21",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "twine>=6.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/faw"]
include = ["src/faw/static/*"]

[tool.hatch.version]
path = "src/faw/__init__.py"
